PLUSH: blocked "old" colorschemes | added ?$version to end of CSS includes to help with caching | fixed FF2 onfade text flickering | set other Yes/No config options to use green/red coloring

--- a/main/interfaces/Plush/templates/static/stylesheets/plush-default.css
+++ b/main/interfaces/Plush/templates/static/stylesheets/plush-default.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #B1B1B1;
 	font-family: arial, "lucida console", sans-serif;
+	opacity: .9999;
 }
 
 select, input {
